# schach

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Bishop.cpp.E9FA34803B1260B0.idx  Bishop.hpp.BD6EB664054A9CD9.idx  Board.cpp.EE9F493FE16A4640.idx  Board.hpp.0A4A76D05FC25A53.idx  ChessCoordinates.cpp.57C0B4CB5DB1D3C6.idx  ChessCoordinates.hpp.4E2795DA2C483D7F.idx  King.cpp.8BE3BF65A8AE68E9.idx  King.hpp.B9686A6E615357D8.idx  Knight.cpp.D67CB2A4A79E95AE.idx  Knight.hpp.21029A98BFDA67FB.idx  Pawn.cpp.F46A76EAB6426B45.idx  Pawn.hpp.6F1BB99EBE9FE4AB.idx  Piece.cpp.6C713E1BE01B7F40.idx  Piece.hpp.47D7800E39EACEBD.idx  PossibleMoveMarker.cpp.F8DDEB01C3638DA7.idx  PossibleMoveMarker.hpp.BF4C435ACFED44AE.idx  Queen.cpp.D0E65E7105F58402.idx  Queen.hpp.C9A8F664C3DDE1FE.idx  Rook.cpp.6EE1319A0A0A4617.idx  Rook.hpp.EB936E72AC72B1BF.idx  colors.hpp.5067A1E372FA4883.idx  directions.hpp.1BF1691392269B1B.idx  helpers.cpp.EB4091FAF2EFD9A5.idx  helpers.hpp.F2FA9A465BAE8C6F.idx  main.cpp.1357073B2133FFAF.idx  rochade_types.hpp.7C4A3E126D299FCD.idx
include/: Bishop.hpp  Board.hpp  ChessCoordinates.hpp  Coordinates.hpp  GameStatus.hpp  King.hpp  Knight.hpp  Move.hpp  NormalMove.hpp  Pawn.hpp  Piece.hpp  Pieces.hpp  PossibleMoveField.hpp  PossibleMoveMarker.hpp  PossiblePromotionMarker.hpp  PromotionMove.hpp  Queen.hpp  Rook.hpp  Tile.hpp  colors.hpp  directions.hpp  helpers.hpp  piece_name.hpp  player_type.hpp  rochade_types.hpp  types.hpp
src/: Bishop.cpp  Board.cpp  BoardAILogic.cpp  BoardMovesLogic.cpp  CMakeLists.txt  ChessCoordinates.cpp  Coordinates.cpp  King.cpp  Knight.cpp  Move.cpp  NormalMove.cpp  Pawn.cpp  Piece.cpp  Pieces.cpp  PossibleMoveField.cpp  PossibleMoveMarker.cpp  PossiblePromotionMarker.cpp  PromotionMove.cpp  Queen.cpp  Rook.cpp  Tile.cpp  helpers.cpp  main.cpp
